<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/Map_View_main"
        android:icon="@drawable/ic_map_foreground"
        android:title="@string/Map_View_Main" />

    <item
        android:id="@+id/List_View"
        android:icon="@drawable/ic_list_foreground"
        android:title="@string/List_View" />

    <item
        android:id="@+id/Workmates"
        android:icon="@drawable/ic_workmates_foreground"
        android:title="@string/Workmates" />

    </menu>