<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/accueil_toolbar"
    android:background="?attr/colorPrimary"
    app:theme="@style/ToolBarStyle">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete|textAutoCorrect"
            app:queryBackground="@android:color/transparent"
            app:searchIcon="@drawable/ic_search" />
    </LinearLayout>



</androidx.appcompat.widget.Toolbar>